src/test/ui/mut/mut-ref.stderr
error: the order of `mut` and `ref` is incorrect
  --> $DIR/mut-ref.rs:2:9
   |
LL |     let mut ref x = 10;
   |         ^^^^^^^ help: try switching the order: `ref mut`

error: aborting due to previous error

